// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-log-viewer-level should get log viewer levels with custom pagination 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "level": "Verbose",
        "name": "UmbracoFile",
      },
    ],
    "total": 2,
  },
}
`;

exports[`get-log-viewer-level should get log viewer levels with default parameters 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "level": "Information",
        "name": "Global",
      },
      {
        "level": "Verbose",
        "name": "UmbracoFile",
      },
    ],
    "total": 2,
  },
}
`;
